<resources>
    <string name="app_name">MyContactsApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="family">Family</string>
    <string name="friends">Friends</string>
    <string name="work">Work</string>
    <string name="other">Other</string>

    <string-array name="groups">
        <item>Family Group</item>
        <item>Friends Group</item>
        <item>Work Group</item>
        <item>Other Group</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>